{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 39,
  "lineage": "987faefe-f3c5-7006-0e8f-a546c4772b2f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:872450837551:internet-gateway/igw-0dcfb876e3513181f",
            "id": "igw-0dcfb876e3513181f",
            "owner_id": "872450837551",
            "region": "eu-west-2",
            "vpc_id": "vpc-09d97a6418603dd4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "g13-web-app-logs-5a29e74a",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:872450837551:loadbalancer/app/g13-web-app-alb/f8cb8c7b3a6ca45a",
            "arn_suffix": "app/g13-web-app-alb/f8cb8c7b3a6ca45a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "g13-web-app-alb-1974178099.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:872450837551:loadbalancer/app/g13-web-app-alb/f8cb8c7b3a6ca45a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "g13-web-app-alb",
            "preserve_host_header": false,
            "region": "eu-west-2",
            "security_groups": [
              "sg-06ea53231e8d7b54f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-007f788933a370fb1"
              },
              {
                "subnet_id": "subnet-04d07c01010ef947f"
              }
            ],
            "subnets": [
              "subnet-007f788933a370fb1",
              "subnet-04d07c01010ef947f"
            ],
            "vpc_id": "vpc-09d97a6418603dd4b",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:872450837551:loadbalancer/app/g13-web-app-alb/f8cb8c7b3a6ca45a"
          },
          "dependencies": [
            "aws_s3_bucket.lb_logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:872450837551:listener/app/g13-web-app-alb/f8cb8c7b3a6ca45a/9a1829ce4415c615",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:872450837551:targetgroup/g13-web-app-tg/052acf944ecdd8d0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:872450837551:listener/app/g13-web-app-alb/f8cb8c7b3a6ca45a/9a1829ce4415c615",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:872450837551:loadbalancer/app/g13-web-app-alb/f8cb8c7b3a6ca45a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:872450837551:listener/app/g13-web-app-alb/f8cb8c7b3a6ca45a/9a1829ce4415c615"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_s3_bucket.lb_logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:872450837551:targetgroup/g13-web-app-tg/052acf944ecdd8d0",
            "arn_suffix": "targetgroup/g13-web-app-tg/052acf944ecdd8d0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:872450837551:targetgroup/g13-web-app-tg/052acf944ecdd8d0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:872450837551:loadbalancer/app/g13-web-app-alb/f8cb8c7b3a6ca45a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "g13-web-app-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09d97a6418603dd4b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:872450837551:targetgroup/g13-web-app-tg/052acf944ecdd8d0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:872450837551:security-group/sg-06ea53231e8d7b54f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ea53231e8d7b54f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "g13-web-app-alb-sg",
            "name_prefix": "",
            "owner_id": "872450837551",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09d97a6418603dd4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "872450837551",
            "id": "sg-06ea53231e8d7b54f",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:872450837551:security-group/sg-0ddee9bde724bfb6d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddee9bde724bfb6d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06ea53231e8d7b54f"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "g13-web-app-tasks-sg",
            "name_prefix": "",
            "owner_id": "872450837551",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09d97a6418603dd4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "872450837551",
            "id": "sg-0ddee9bde724bfb6d",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:872450837551:subnet/subnet-03328c8a50780fd8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03328c8a50780fd8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872450837551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "g13-private-0"
            },
            "tags_all": {
              "Name": "g13-private-0"
            },
            "vpc_id": "vpc-09d97a6418603dd4b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "872450837551",
            "id": "subnet-03328c8a50780fd8e",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:872450837551:subnet/subnet-0e70cbfbfb1455b78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e70cbfbfb1455b78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872450837551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "g13-private-1"
            },
            "tags_all": {
              "Name": "g13-private-1"
            },
            "vpc_id": "vpc-09d97a6418603dd4b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "872450837551",
            "id": "subnet-0e70cbfbfb1455b78",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:872450837551:subnet/subnet-007f788933a370fb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007f788933a370fb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "872450837551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "g13-public-0"
            },
            "tags_all": {
              "Name": "g13-public-0"
            },
            "vpc_id": "vpc-09d97a6418603dd4b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "872450837551",
            "id": "subnet-007f788933a370fb1",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:872450837551:subnet/subnet-04d07c01010ef947f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d07c01010ef947f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "872450837551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "g13-public-1"
            },
            "tags_all": {
              "Name": "g13-public-1"
            },
            "vpc_id": "vpc-09d97a6418603dd4b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "872450837551",
            "id": "subnet-04d07c01010ef947f",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:872450837551:vpc/vpc-09d97a6418603dd4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a4c7b91d1e9e3ed2",
            "default_route_table_id": "rtb-0973ce64924f8dd7c",
            "default_security_group_id": "sg-084f2eaaa368b75bf",
            "dhcp_options_id": "dopt-0c84a6e8b51f9d53d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d97a6418603dd4b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0973ce64924f8dd7c",
            "owner_id": "872450837551",
            "region": "eu-west-2",
            "tags": {
              "Name": "g13-vpc"
            },
            "tags_all": {
              "Name": "g13-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "872450837551",
            "id": "vpc-09d97a6418603dd4b",
            "region": "eu-west-2"
          }
        }
      ]
    }
  ]
}